feat: 用户详情接口完成
