# docs/swagger.json
@@ -69,6 +69,30 @@
                     }
                 }
             }
+        },
+        "/user-detail": {
+            "get": {
+                "description": "do ping",
+                "tags": [
+                    "公共方法"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "请输入user identity",
+                        "name": "identity",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":\"200\",\"data\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     }
 }
