# service/user.go
@@ -1,0 +1,48 @@
+package service
+
+import (
+	"gin_orm_oj/models"
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+	"log"
+	"net/http"
+)
+
+// GetUserDetail
+// @Description do ping
+// @Tags 公共方法
+// @Param identity query string false "请输入user identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /user-detail [get]
+func GetUserDetail(c *gin.Context) {
+	identity := c.Query("identity")
+
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "用户唯一标识不能为空",
+		})
+		return
+	}
+
+	data := new(models.UserBasic)
+
+	err := models.DB.Where("identity = ?", identity).First(&data).Error
+
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "用户不存在",
+			})
+			return
+		}
+		log.Println("GetUserDetail error", err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": data,
+	})
+}
